--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "start": "electron .",
     "tsc": "tsc",
-    "standard": "standard"
+    "standard": "standard */**/*.ts"
   },
   "author": "Shybert",
-  "license": "GNU GPLv3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Shybert/Dark-Souls-DT"
+  },
+  "license": "GPL-3.0",
   "devDependencies": {
     "electron": "^2.0.0-beta.4",
     "eslint-plugin-typescript": "^0.10.0",
@@ -17,11 +21,14 @@
     "typescript": "^2.7.2",
     "typescript-eslint-parser": "^14.0.0"
   },
+  "dependencies": {},
   "standard": {
     "parser": "typescript-eslint-parser",
-    "plugins": [
+    "plugins": [ 
       "typescript"
+    ],
+    "ignore": [
+      "app/"
     ]
-  },
-  "dependencies": {}
+  }
 }
