--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/fs-extra": "^5.0.1",
     "electron": "^2.0.0-beta.4",
     "eslint-plugin-typescript": "^0.10.0",
     "standard": "^11.0.1",
     "typescript": "^2.7.2",
     "typescript-eslint-parser": "^14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "electron-store": "^1.3.0",
+    "fs-extra": "^5.0.0"
+  },
   "standard": {
     "parser": "typescript-eslint-parser",
-    "plugins": [ 
+    "plugins": [
       "typescript"
     ],
     "ignore": [
