--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.1",
     "electron": "^2.0.0-beta.4",
     "eslint-plugin-typescript": "^0.10.0",
