Moved compiled js files to seperate folder and added to .gitignore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "esModuleInterop": true,
         "noImplicitAny": true,
         "moduleResolution": "node",
-        "outDir": "app",
+        "outDir": "app/js",
         "rootDir": "src",
         "sourceMap": true
     },
