--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dsdt",
   "version": "0.1.0",
   "description": "A death counter and timer application & overlay built for Dark Souls.",
-  "main": "app/main.js",
+  "main": "app/js/main.js",
   "scripts": {
     "start": "electron .",
     "tsc": "tsc",
