--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron .",
     "tsc": "tsc",
-    "standard": "standard */**/*.ts"
+    "standard": "standard */**/*.ts",
+    "test": "electron-mocha app/js/test/ --renderer"
   },
   "author": "Shybert",
   "repository": {
@@ -15,9 +16,13 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.1",
+    "@types/mocha": "^5.0.0",
+    "chai": "^4.1.2",
     "electron": "^2.0.0-beta.4",
+    "electron-mocha": "^6.0.1",
     "eslint-plugin-typescript": "^0.10.0",
     "standard": "^11.0.1",
     "typescript": "^2.7.2",
