--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/chai": "^4.1.2",
+    "@types/chai": "^4.1.3",
     "@types/electron-store": "^1.3.0",
-    "@types/fs-extra": "^5.0.1",
-    "@types/mocha": "^5.0.0",
+    "@types/fs-extra": "^5.0.2",
+    "@types/mocha": "^5.2.1",
     "chai": "^4.1.2",
-    "electron": "^2.0.0-beta.4",
-    "electron-mocha": "^6.0.1",
-    "eslint-plugin-typescript": "^0.10.0",
+    "electron": "^2.0.2",
+    "electron-mocha": "^6.0.2",
+    "eslint-plugin-typescript": "^0.12.0",
     "standard": "^11.0.1",
-    "typescript": "^2.7.2",
-    "typescript-eslint-parser": "^14.0.0"
+    "typescript": "^2.9.1",
+    "typescript-eslint-parser": "^16.0.0"
   },
   "dependencies": {
-    "electron-store": "^1.3.0",
-    "fs-extra": "^5.0.0"
+    "electron-store": "^2.0.0",
+    "fs-extra": "^6.0.1"
   },
   "standard": {
     "parser": "typescript-eslint-parser",
