--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/dateformat": "^1.0.1",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.2",
     "@types/mocha": "^5.2.1",
@@ -27,6 +28,7 @@
     "typescript": "^2.9.1"
   },
   "dependencies": {
+    "dateformat": "^3.0.3",
     "electron-store": "^2.0.0",
     "fs-extra": "^6.0.1"
   }
