--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A death counter and timer application & overlay built for Dark Souls.",
   "main": "app/js/main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron-webpack dev",
     "tsc": "tsc",
     "test": "electron-mocha app/js/test/ --renderer --recursive"
   },
@@ -23,9 +23,14 @@
     "chai": "^4.1.2",
     "electron": "^2.0.2",
     "electron-mocha": "^6.0.2",
+    "electron-webpack": "^2.1.2",
+    "electron-webpack-ts": "^2.0.2",
+    "electron-webpack-vue": "^2.1.3",
     "tslint": "^5.10.0",
     "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "vue": "^2.5.16",
+    "webpack": "^4.15.1"
   },
   "dependencies": {
     "dateformat": "^3.0.3",
