--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "dateformat": "^3.0.3",
     "electron-store": "^2.0.0",
-    "fs-extra": "^6.0.1"
+    "fs-extra": "^6.0.1",
+    "vue-router": "^3.0.1"
   }
 }
