--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/dateformat": "^1.0.1",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.2",
+    "@types/lodash": "^4.14.112",
     "@types/mocha": "^5.2.1",
     "chai": "^4.1.2",
     "electron": "^2.0.2",
@@ -36,6 +37,7 @@
     "dateformat": "^3.0.3",
     "electron-store": "^2.0.0",
     "fs-extra": "^6.0.1",
+    "lodash": "^4.17.10",
     "vue-router": "^3.0.1"
   }
 }
