--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "dsdt",
   "version": "0.1.0",
   "description": "A death counter and timer application & overlay built for Dark Souls.",
-  "main": "app/js/main.js",
+  "main": "dist/main/main.js",
   "scripts": {
-    "start": "electron-webpack dev",
-    "tsc": "tsc",
-    "test": "electron-mocha app/js/test/ --renderer --recursive"
+    "start": "electron-webpack dev"
   },
   "author": "Shybert",
   "repository": {
@@ -15,29 +13,23 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/chai": "^4.1.3",
-    "@types/dateformat": "^1.0.1",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.2",
     "@types/lodash": "^4.14.112",
-    "@types/mocha": "^5.2.1",
-    "chai": "^4.1.2",
     "electron": "^2.0.2",
-    "electron-mocha": "^6.0.2",
     "electron-webpack": "^2.1.2",
     "electron-webpack-ts": "^2.0.2",
     "electron-webpack-vue": "^2.1.3",
     "tslint": "^5.10.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.9.1",
-    "vue": "^2.5.16",
     "webpack": "^4.15.1"
   },
   "dependencies": {
-    "dateformat": "^3.0.3",
     "electron-store": "^2.0.0",
     "fs-extra": "^6.0.1",
     "lodash": "^4.17.10",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   }
 }
