Removed html coverage reporter

--- a/package.json
+++ b/package.json
@@ -64,6 +64,6 @@
       "!**/*.d.ts",
       "!**/node_modules/**"
     ],
-    "coverageReporters": ["html", "text-summary"]
+    "coverageReporters": ["text-summary"]
   }
 }
