--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "electron-store": "^2.0.0",
     "lodash": "^4.17.10",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "jest": {
     "globals": {
@@ -65,6 +66,8 @@
       "!**/*.d.ts",
       "!**/node_modules/**"
     ],
-    "coverageReporters": ["text-summary"]
+    "coverageReporters": [
+      "text-summary"
+    ]
   }
 }
