--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-class-component": "^6.2.0",
     "vue-jest": "^2.6.0",
     "vue-property-decorator": "^7.1.1",
+    "vuex-type-helper": "^1.2.0",
     "webpack": "^4.20.2"
   },
   "dependencies": {
