--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/chart.js": "^2.7.40",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.2",
@@ -35,9 +36,11 @@
     "webpack": "^4.20.2"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "electron-store": "^2.0.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
+    "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
