--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.2",
     "@types/lodash": "^4.14.116",
+    "@types/write-file-atomic": "^2.1.1",
     "@vue/test-utils": "^1.0.0-beta.25",
     "electron": "^3.0.0",
     "electron-webpack": "^2.3.1",
@@ -42,7 +43,8 @@
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "write-file-atomic": "^2.3.0"
   },
   "jest": {
     "globals": {
