--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main/main.js",
   "scripts": {
     "start": "electron-webpack dev",
-    "test": "jest"
+    "test": "jest",
+    "rebuild": "electron-builder install-app-deps"
   },
   "author": "Shybert",
   "repository": {
@@ -22,6 +23,7 @@
     "@types/write-file-atomic": "^2.1.1",
     "@vue/test-utils": "^1.0.0-beta.28",
     "electron": "^3.0.13",
+    "electron-builder": "^20.38.4",
     "electron-webpack": "^2.6.1",
     "electron-webpack-ts": "^3.1.0",
     "electron-webpack-vue": "^2.2.2",
@@ -39,7 +41,9 @@
   "dependencies": {
     "chart.js": "^2.7.3",
     "electron-store": "^2.0.0",
+    "iohook": "^0.3.1",
     "lodash": "^4.17.11",
+    "native-keymap": "^1.2.5",
     "vue": "^2.5.21",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.2",
@@ -74,6 +78,21 @@
     ],
     "coverageReporters": [
       "text-summary"
+    ]
+  },
+  "iohook": {
+    "targets": [
+      "node-64",
+      "electron-64"
+    ],
+    "platforms": [
+      "win32",
+      "darwin",
+      "linux"
+    ],
+    "arches": [
+      "x64",
+      "ia32"
     ]
   }
 }
