--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main/main.js",
   "scripts": {
     "start": "electron-webpack dev",
+    "lint": "wotan",
     "test": "jest",
     "rebuild": "electron-builder install-app-deps"
   },
@@ -15,6 +16,9 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "@fimbul/valtyr": "^0.17.0",
+    "@fimbul/ve": "^0.17.0",
+    "@fimbul/wotan": "^0.17.0",
     "@types/chart.js": "^2.7.42",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.4",
@@ -32,6 +36,7 @@
     "tslint": "^5.12.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.2.2",
+    "typescript-tslint-plugin": "^0.2.1",
     "vue-class-component": "^6.3.2",
     "vue-jest": "^3.0.2",
     "vue-property-decorator": "^7.2.0",
