--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "strict": true,
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
+        "plugins": [
+            { "name": "typescript-tslint-plugin" }
+        ]
     }
 }
