--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
+    "vuex-smart-module": "^0.2.2",
     "write-file-atomic": "^2.3.0"
   },
   "jest": {
