--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fimbul/valtyr": "^0.17.0",
     "@fimbul/ve": "^0.17.0",
     "@fimbul/wotan": "^0.17.0",
-    "@types/chart.js": "^2.7.42",
+    "@types/chart.js": "^2.7.48",
     "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.11",
@@ -50,7 +50,7 @@
     "lodash": "^4.17.11",
     "native-keymap": "^1.2.5",
     "vue": "^2.5.21",
-    "vue-chartjs": "^3.4.0",
+    "vue-chartjs": "github:Shybert/vue-chartjs",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
     "vuex-smart-module": "^0.2.2",
