--- a/package.json
+++ b/package.json
@@ -58,6 +58,15 @@
     "vue-cli-plugin-electron-builder": "^1.2.0",
     "vue-template-compiler": "^2.5.21"
   },
+  "vue": {
+    "css": {
+      "loaderOptions": {
+        "sass": {
+          "data": "@import '@/styles/variables.scss';"
+        }
+      }
+    }
+  },
   "prettier": {
     "semi": false,
     "singleQuote": true
