--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "main": "background.js",
   "dependencies": {
     "chart.js": "^2.7.3",
-    "electron-store": "^2.0.0",
     "lodash": "^4.17.11",
     "vue": "^2.6.6",
     "vue-chartjs": "github:Shybert/vue-chartjs",
@@ -29,16 +28,13 @@
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-smart-module": "^0.2.6",
-    "write-file-atomic": "^2.3.0"
+    "vuex-smart-module": "^0.2.6"
   },
   "devDependencies": {
     "@types/chart.js": "^2.7.48",
-    "@types/electron-store": "^1.3.0",
     "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.1.4",
     "@types/lodash": "^4.14.119",
-    "@types/write-file-atomic": "^2.1.1",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-plugin-typescript": "^3.5.0",
     "@vue/cli-plugin-unit-jest": "^3.5.0",
