--- a/package.json
+++ b/package.json
@@ -21,39 +21,43 @@
   },
   "main": "background.js",
   "dependencies": {
-    "vue": "^2.6.6",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^8.0.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-smart-module": "^0.2.6"
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.3.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
+    "vuex-smart-module": "^0.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-plugin-unit-jest": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/eslint-config-typescript": "^4.0.0",
+    "@types/jest": "^24.0.23",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@vue/cli-plugin-typescript": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/eslint-config-typescript": "^5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.1",
-    "electron": "^4.0.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "fibers": "^3.1.1",
-    "sass": "^1.17.2",
-    "sass-loader": "^7.1.0",
-    "ts-jest": "^23.0.0",
-    "typescript": "^3.2.1",
-    "vue-cli-plugin-electron-builder": "^1.2.0",
-    "vue-template-compiler": "^2.5.21"
+    "babel-eslint": "^10.0.3",
+    "electron": "^5.0.12",
+    "eslint": "^6.6.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "fibers": "^4.0.2",
+    "prettier": "^1.19.1",
+    "sass": "^1.23.6",
+    "sass-loader": "^8.0.0",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.7.2",
+    "vue-cli-plugin-electron-builder": "^1.4.1",
+    "vue-template-compiler": "^2.6.10"
   },
   "vue": {
     "css": {
       "loaderOptions": {
         "sass": {
-          "data": "@import '@/styles/variables.scss';"
+          "prependData": "@import '@/styles/variables.scss';"
         }
       }
     }
