--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@vue/composition-api": "^0.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.3.0",
