--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "sass": "^1.23.6",
     "sass-loader": "^8.0.0",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.7.2",
+    "typescript": "3.6.4",
     "vue-cli-plugin-electron-builder": "^1.4.1",
     "vue-template-compiler": "^2.6.10"
   },
