--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
-    "vuex-smart-module": "^0.3.2"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
