Renamed application to Tamasi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dsdt",
+  "name": "Tamasi",
   "version": "0.1.0",
   "description": "A death counter and timer application & overlay built for Dark Souls.",
   "author": "Shybert",
