Updated linter/formatter setup and fixed all new issues

--- a/package.json
+++ b/package.json
@@ -27,22 +27,22 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
-    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-plugin-typescript": "^4.0.5",
     "@vue/cli-plugin-unit-jest": "^4.0.5",
     "@vue/cli-service": "^4.0.5",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/eslint-config-typescript": "^5.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "electron": "^5.0.12",
-    "eslint": "^6.6.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.2",
     "fibers": "^4.0.2",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "sass": "^1.23.6",
     "sass-loader": "^8.0.0",
     "ts-jest": "^24.1.0",
@@ -70,8 +70,10 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "eslint:recommended",
+      "@vue/typescript/recommended",
       "@vue/prettier",
-      "@vue/typescript"
+      "@vue/prettier/@typescript-eslint"
     ],
     "rules": {},
     "parserOptions": {
