--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "vue-cli-service electron:build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
+    "generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -35,6 +36,7 @@
     "@vue/test-utils": "1.0.0-beta.32",
     "babel-eslint": "^10.1.0",
     "electron": "^8.2.0",
+    "electron-icon-builder": "^1.0.2",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.2",
