Updated the GitHub repo link in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Shybert",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Shybert/Dark-Souls-DT"
+    "url": "https://github.com/Shybert/tamasi"
   },
   "private": true,
   "scripts": {
