--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^25.1.4",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
@@ -36,6 +37,7 @@
     "@vue/test-utils": "1.0.0-beta.32",
     "babel-eslint": "^10.1.0",
     "electron": "^8.2.0",
+    "electron-devtools-installer": "^3.1.1",
     "electron-icon-builder": "^1.0.2",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
